@@ -1324,7 +1324,7 @@ CF_PLUGIN void* globalEventListener(int* type, ...)
     
     /* Invalidate freed map wrapper. */
     if (context->event_code == EVENT_MAPUNLOAD)
-        Handle_Map_Unload_Hook(context->who);
+        Handle_Map_Unload_Hook((Crossfire_Map*)context->who);
     
     freeContext(context);
     
@@ -1363,7 +1363,7 @@ CF_PLUGIN void* eventListener(int* type, ...)
     va_end(args);
     
     if ((context->event_code == EVENT_DESTROY) && !strcmp(script_tmp, "cfpython_auto_hook")) {
-        Handle_Destroy_Hook(context->who);
+        Handle_Destroy_Hook((Crossfire_Object*)context->who);
         freeContext(context);
         return &rv;
     }
